# FileSystem

./: CMakeLists.txt  README.md  blocks_bitmap.h  command.h  command_base.h  constants.h  directory.h  filesystem.txt  inode.h  main.c  run.h  script.sh  sectors.h  settings.h
client/: CMakeLists.txt  main.c
commands/: base.h  initial.h  main.h  run.h  str_proc.h
core/: directory.h  sectors.h
old/: inode.h
server/: CMakeLists.txt  main.c  settings.h
server/commands/: dir_inst.h  initial.h  main.h  run.h  str_proc.h
server/core/: bitmap.h  inode.h  sectors.h
